syntax = "proto3";

service Admin {
  rpc GetAdminInfo (GetAdminInfoMessage) returns (AdminInfoResponse) {}
}
message GetAdminInfoMessage {
  string target_admin_name = 1;
}
message AdminInfoResponse {
  string name = 1;
  string age = 2;
}
